# hdf5_market_storage

./: Readme.md  setup.cfg
src/FastH5/: configs.py  h5read.py  h5write.py  utils.py
src/rdsp_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: server.py  test_package_usage.py
